--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.9.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1",
+    "vue-toastification": "^2.0.0-rc.5",
     "vue3-quill": "^0.3.1"
   },
   "devDependencies": {
